--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,71 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'Satoshi-Regular';
+  src: url('../../public/fonts/Satoshi-Regular.woff2') format('woff2'),
+       url('../../public/fonts/Satoshi-Regular.woff') format('woff'),
+       url('../../public/fonts/Satoshi-Regular.ttf') format('truetype');
+       font-weight: 400;
+       font-display: swap;
+       font-style: normal;
+}
+
+
+@font-face {
+  font-family: 'Satoshi-Italic';
+  src: url('../../public/fonts/Satoshi-Italic.woff2') format('woff2'),
+       url('../../public/fonts/Satoshi-Italic.woff') format('woff'),
+       url('../../public/fonts/Satoshi-Italic.ttf') format('truetype');
+       font-weight: 400;
+       font-display: swap;
+       font-style: italic;
+}
+
+
+@font-face {
+  font-family: 'Satoshi-Medium';
+  src: url('../../public/fonts/Satoshi-Medium.woff2') format('woff2'),
+       url('../../public/fonts/Satoshi-Medium.woff') format('woff'),
+       url('../../public/fonts/Satoshi-Medium.ttf') format('truetype');
+       font-weight: 500;
+       font-display: swap;
+       font-style: normal;
+}
+
+
+@font-face {
+  font-family: 'Satoshi-MediumItalic';
+  src: url('../../public/fonts/Satoshi-MediumItalic.woff2') format('woff2'),
+       url('../../public/fonts/Satoshi-MediumItalic.woff') format('woff'),
+       url('../../public/fonts/Satoshi-MediumItalic.ttf') format('truetype');
+       font-weight: 500;
+       font-display: swap;
+       font-style: italic;
+}
+
+
+@font-face {
+  font-family: 'Satoshi-Bold';
+  src: url('../../public/fonts/Satoshi-Bold.woff2') format('woff2'),
+       url('../../public/fonts/Satoshi-Bold.woff') format('woff'),
+       url('../../public/fonts/Satoshi-Bold.ttf') format('truetype');
+       font-weight: 700;
+       font-display: swap;
+       font-style: normal;
+}
+
+
+@font-face {
+  font-family: 'Satoshi-BoldItalic';
+  src: url('../../public/fonts/Satoshi-BoldItalic.woff2') format('woff2'),
+       url('../../public/fonts/Satoshi-BoldItalic.woff') format('woff'),
+       url('../../public/fonts/Satoshi-BoldItalic.ttf') format('truetype');
+       font-weight: 700;
+       font-display: swap;
+       font-style: italic;
+}
+
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
